Updated paddings to be more consistent

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <h1 class="mb-5 mb-md-4 u-hyphens">Want to become<br/>
                             <span
                                     class="txt-rotate"
-                                    data-rotate='[ "a programmer ?", "a game dev. ?", "an engineer?", "a team player?", "an innovator?"]'>&nbsp;</span>
+                                    data-rotate='[ "a programmer?", "a game dev?", "an engineer?", "a team player?", "an innovator?"]'>&nbsp;</span>
                         </h1>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
 
 <div class="row row-padding" data-aos="fade-left" data-aos-offset="500" data-aos-once="true">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
-        <div class="row my-5 pt-5">
+        <div class="row">
             <div class="col-12">
                 <h2 class="pb-5">Ons verhaal</h2>
                 <div class="embed-container">
@@ -342,181 +342,6 @@
         </div>
     </div>
 </div>
-
-
-<!--<div class="row row-padding">-->
-<!--    <div class="col-10 offset-1 col-md-10 offset-md-1">-->
-<!--        <div class="row my-5 pt-5">-->
-<!--            <div class="col-12">-->
-<!--                <div class="embed-container">-->
-<!--                    <iframe src="https://player.vimeo.com/video/368016064?color=ffffff&title=0&byline=0&portrait=0"-->
-<!--                            width="100%" height="360" frameborder="0" allow="autoplay; fullscreen"-->
-<!--                            allowfullscreen></iframe>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="row">-->
-<!--            <div class="col-12">-->
-<!--                <h2 class="mb-4">Waarom Bit Academy?</h2>-->
-<!--            </div>-->
-<!--            <div class="col-9 col-lg-8">-->
-<!--                <p>Bij de Bit Academy willen wij de beste tech opleiding van Nederland worden, omdat Nederland toe-->
-<!--                    is aan een opleiding waar het gigantische tekort aan It’ers echt opgelost gaat worden. Komende-->
-<!--                    jaren komen wij in Nederland meer dan 100.000 mensen tekort in de ICT sector, het wordt tijd dat-->
-<!--                    mensen daarvoor opgeleid worden.</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="method">-->
-<!--            <div class="method__main">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-12">-->
-<!--                        <div class="method__main-img">-->
-<!--                            <div class="row">-->
-<!--                                <div class="col-10 offset-1">-->
-<!--                                    <img src="images/collage.png" alt="Team" class="w-100 mb-4">-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            <div class="method__main-img-dots">-->
-<!--                                <img src="images/home-dots.svg" alt="Dots">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-12 col-md-10 offset-md-1">-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-10 offset-1 col-md-4 offset-md-0 mb-3 mb-md-0">-->
-<!--                                <h2 class="h2&#45;&#45;lg">Lesmethode</h2>-->
-<!--                            </div>-->
-<!--                            <div class="col-10 offset-1 col-md-8 offset-md-0">-->
-<!--                                <p class="mb-4 pb-2 pb-md-0">-->
-<!--                                    Binnen de Bit Academy werk je op je eigen tempo en kies je een eigen leerroute.-->
-<!--                                    Wij-->
-<!--                                    hebben-->
-<!--                                    geen klassikale lessen of 'roosters'. Je doet het samen, met elkaar. Je-->
-<!--                                    bent 3 dagen-->
-<!--                                    per week, van 09:30 - 16:00, bij ons op locatie bezig met het bouwen van toffe-->
-<!--                                    tech oplossingen. Je kiest zelfstandig je eigen leerroute en bepaald je eigen-->
-<!--                                    tempo. Zo-->
-<!--                                    leer je stapje voor stapje programmeren.-->
-<!--                                    Benieuwd wat je allemaal leert?-->
-<!--                                </p>-->
-<!--                                <a href="/programma" class="btn px-5 px-md-4"><span>Bekijk programma</span></a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="method__percentages">-->
-<!--                <div class="row">-->
-<!--                    <div class="col-12 col-md-5 mb-5 mb-md-0">-->
-<!--                        <div class="method__percentages-item">-->
-<!--                            <p class="p&#45;&#45;lg">70%</p>-->
-<!--                            <div class="method__percentages-item-bar w-75" style="background-color:#33C1D3;">-->
-<!--                                &nbsp;-->
-<!--                            </div>-->
-<!--                            <h3>Programmeren</h3>-->
-<!--                            <p>Programmeren is als het spelen van een instrument, je moet het elke dag doen om er-->
-<!--                                beter in te worden. Vandaar dat bij ons de focus ligt op doen. Je bent minimaal-->
-<!--                                70% van je tijd bezig met programmeren. <br/>Alleen zo leer je het echt!</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-12 col-md-4 mb-5 mb-md-0">-->
-<!--                        <div class="method__percentages-item">-->
-<!--                            <p class="p&#45;&#45;lg">20%</p>-->
-<!--                            <div class="method__percentages-item-bar w-25" style="background-color:#EE5965;">-->
-<!--                                &nbsp;-->
-<!--                            </div>-->
-<!--                            <h3>Samenwerken</h3>-->
-<!--                            <p>Alles wat je om je heen ziet is gemaakt door een team.-->
-<!--                                Samenwerken is daarom een groot onderdeel van-->
-<!--                                onze manier van werken. Door goed te leren samenwerken, bouw jij mee aan de-->
-<!--                                toekomst!</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-12 col-md-3">-->
-<!--                        <div class="method__percentages-item">-->
-<!--                            <p class="p&#45;&#45;lg">10%</p>-->
-<!--                            <div class="method__percentages-item-bar w-25" style="background-color:#5ABF8F;">-->
-<!--                                &nbsp;-->
-<!--                            </div>-->
-<!--                            <h3>Presenteren</h3>-->
-<!--                            <p>Presentaties geven is spannend, maar erg belangrijk als je straks afgestudeerd bent.-->
-<!--                                Vandaar dat we dit uitgebreid oefenen. Dit ga jij ook kunnen!</p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="row pb-5 mb-5">-->
-<!--            <div class="col-12 mb-4">-->
-<!--                <h2 class="h2&#45;&#45;xl">Kern principes</h2>-->
-<!--            </div>-->
-<!--            <div class="col-12 col-md-8 mb-5 pb-5">-->
-<!--                <h3 class="h2 h2&#45;&#45;lg mb-4">Peer to peer vs. klassikaal</h3>-->
-<!--                <div class="row align-items-center">-->
-<!--                    <div class="col-5 col-md-4 mb-4 mb-md-0">-->
-<!--                        <img src="images/i-peer.svg" alt="Icon" class="w-100">-->
-<!--                    </div>-->
-<!--                    <div class="col-12 col-md-8">-->
-<!--                        <p>In plaats van één coach heb je er tientallen. Bij peer to peer learning-->
-<!--                            leer je vooral van je studiegenoten. Je leert feedback geven, communiceren en-->
-<!--                            andere nakijken. Je leert iets immer het beste door het aan iemand anders uit te leggen.-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-12 col-md-8 offset-md-4 mb-5 pb-5">-->
-<!--                <h3 class="h2 h2&#45;&#45;lg mb-4">Echte opdrachtgevers vs. fictief</h3>-->
-<!--                <div class="row align-items-center">-->
-<!--                    <div class="col-5 col-md-4 mb-4 mb-md-0">-->
-<!--                        <img src="images/i-crown.svg" alt="Icon" class="w-100">-->
-<!--                    </div>-->
-<!--                    <div class="col-12 col-md-8">-->
-<!--                        <p>Je leert iets pas echt in de praktijk. Bij ons ga je daarom zo snel mogelijk aan de slag-->
-<!--                            voor echte opdrachtgevers met echte projecten.-->
-<!--                            Dit doe je in groepen van 2 - 4 studenten. Dit betekent misschien wel dat je allemaal-->
-<!--                            nieuwe technieken moet gaan gebruiken die je nog niet kent, net als in de-->
-<!--                            praktijk.</p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-12 col-md-8">-->
-<!--                <h3 class="h2 h2&#45;&#45;lg mb-4">Eigen ritme vs. vast ritme</h3>-->
-<!--                <div class="row align-items-center">-->
-<!--                    <div class="col-5 col-md-4 mb-4 mb-md-0">-->
-<!--                        <img src="images/i-rythm.svg" alt="Icon" class="w-100">-->
-<!--                    </div>-->
-<!--                    <div class="col-12 col-md-8">-->
-<!--                        <p>Iedereen werkt op zijn eigen tempo en kiest zijn eigen leerroute. Iedereen werkt op een-->
-<!--                            ander tempo. Daarom is ons curriculum zo ingericht dat je een eigen tempo kan bepalen.-->
-<!--                            Wil je sneller? Dat kan altijd!. Wil je liever iets vertragen? Ook geen probleem. </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <div class="row mt-5 pt-5">-->
-<!--            <div class="col-12 mb-5 pb-3">-->
-<!--                <h2>Onze partners</h2>-->
-<!--            </div>-->
-<!--            <div class="col-6 offset-3 col-md-3 offset-md-0 mb-5 mb-md-0 pb-5">-->
-<!--                <img src="images/partners.png" alt="Partners" class="w-100">-->
-<!--            </div>-->
-<!--            <div class="col-12 col-md-7 offset-md-1 pb-5">-->
-<!--                <p>Bit Academy is een samenwerking tussen verschillende ROC’s in Flevoland, Amstelveen, Amsterdam-->
-<!--                    Zuid-Oost, Almere en Bit.</p>-->
-<!--                <br/>-->
-<!--                <p>Bit Academy is een volledige MBO opleiding. Het afronden hiervan leidt tot een niveau 4 diploma.-->
-<!--                    De samenwerking met het ROC zorgt ervoor dat de kwaliteit van de Bit Academy bewaakt is.-->
-<!--                    Daarnaast betaal je regulier lesgeld (geen extra kosten voor de Bit Academy), heb je de-->
-<!--                    voordelen van studiefinanciering en een OV-jaarkaart.</p>-->
-<!--                <br/>-->
-<!--                <p> Daarnaast zorgt het volgen van de opleiding ervoor dat je gemakkelijker kan doorstromen naar het-->
-<!--                    HBO en is er een grotere kans voor een baan in het ICT werkveld.</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
 
 <footer class="footer">
     <div class="container">
