--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body class="index">
 <div class="looking-for-bit">
-    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+    <p>Looking for Bit? <br/><img src="images/arrow.svg" alt=""></p>
 
     <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
 </div>
@@ -110,17 +110,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 pt-2">
                         <p>
-                            Binnen 3 jaar een volwaardig MBO diploma als software developer, werken met de nieuwste
-                            technology en zelf je studie richting kiezen. Leren door zelf actief bezig te zijn in plaats
-                            van
-                            klassieke lessen volgen.
+                            Binnen 3 jaar een volwaardig MBO diploma, werken met de nieuwste
+                            technology en zelf je studie richting kiezen. Je kiest er voor om
+                            Embedded Engineer te worden, Game Developer of Software Developer.
+                            Leren door zelf actief bezig te zijn, individueel opdrachten te
+                            doen of samen te werken in teams.
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 pt-3">
+                    <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
                         <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
                            target="_blank" rel="nofollow"
                            class="btn px-md-0 w-md-100"><span>Meld je aan!</span></a>
@@ -140,9 +141,12 @@
             <div class="col-12 col-md-6 order-md-last col-md-middle">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pb-2">Kies je eigen pad</h2>
-                        <p>Binnen de Bit Academy kan je zelf een pad kiezen. Zo kan je bijvoorbeeld ervoor kiezen om je
-                            te specialiseren in web development, embedded system engineering of game development.</p>
+                        <h2 class="pb-4">Kies je eigen pad</h2>
+                        <p>Binnen de Bit Academy kan je zelf een pad kiezen. Zo kan je bijvoorbeeld ervoor
+                            kiezen om je te specialiseren in web development, embedded system engineering
+                            of game development. Dit doe je door eerst een basis programma te volgen, want
+                            bijna alle tech heeft dezelfde basis. Daarna kun je zelf uitzoeken
+                            wat je het best vindt passen bij jouw talenten. </p>
                     </div>
                 </div>
 
@@ -155,7 +159,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <img src="/images/path.svg" alt="Eigen pad">
+                <img src="/images/path.svg" alt="Eigen pad" style="max-height: 350px;">
             </div>
         </div>
     </div>
@@ -163,7 +167,7 @@
 
 <div class="row row-padding" data-aos="fade-up" data-aos-offset="500" data-aos-once="true">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
-        <div class="row align-items-stretch my-5 pt-5">
+        <div class="row align-items-stretch">
             <div class="col-12 col-md-4 mb-5 mb-md-0">
                 <div class="testimonial">
                     <div class="testimonial__message" style="background-color:#EE5965;">
@@ -206,14 +210,14 @@
             <div class="col-12 col-md-6 col-md-middle">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pb-2">De Bit Academy werkt omdat het anders is</h2>
+                        <h2 class="pb-4">De Bit Academy werkt omdat het anders is</h2>
                         <div class="counted">
                             <p class="item">
                                 <span>1</span>Ervaren coaches uit het bedrijfsleven</p>
                             <p class="item">
                                 <span>2</span>High-tech platform met gamification</p>
                             <p class="item">
-                                <span>3</span>Focus op doen</p>
+                                <span>3</span>Leren door te doen</p>
                             <p class="item">
                                 <span>4</span>Samenwerken met gemotiveerde studenten</p>
                             <p class="item">
@@ -243,14 +247,16 @@
             <div class="col-12 col-md-6 col-md-middle order-md-last ">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pb-2">Altijd inzicht in je groei</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda aut cumque
-                            eligendi, facilis, in iste labore obcaecati, optio porro quo ratione sint soluta sunt ut! Ad
-                            aut officia similique?</p>
+                        <h2 class="pb-4">Altijd inzicht in je groei</h2>
+                        <p>Je vraagt jezelf zeker vaak af waarom je iets moet kunnen? Wij
+                            zorgen ervoor dat je altijd weet waarom je iets doet. Daarnaast
+                            zul je altijd inzicht hebben in hoe ver je bent. Wij hebben skill charts
+                            waar je kan zien welk niveau je hebt op bepaalde gebieden
+                            en wij geven duidelijk aan wanneer je ergens klaar voor bent. </p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-md-middle">
+            <div class="col-12 col-md-5 col-md-middle">
                 <img src="/images/groei.svg" alt="Eigen pad">
             </div>
         </div>
@@ -263,10 +269,11 @@
             <div class="col-12 col-md-6 col-md-middle">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pb-2">Werken voor echte opdrachtgevers</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda aut cumque
-                            eligendi, facilis, in iste labore obcaecati, optio porro quo ratione sint soluta sunt ut! Ad
-                            aut officia similique?</p>
+                        <h2 class="pb-4">Werken voor echte opdrachtgevers</h2>
+                        <p>Niets is frustrerender dan keihard ergens voor werken en vervolgens
+                            zien dat het nooit meer gebruikt wordt. Daarom doe je zoveel mogelijk
+                            echte opdrachten voor echte opdrachtgevers. Bedrijven of
+                            zelfstandigen die je product heel hard nodig hebben! </p>
                     </div>
                 </div>
                 <div class="row">
@@ -289,10 +296,11 @@
     <div class="col-md-6 offset-md-3 col-sm-12">
         <div class="row">
             <div class="col-12">
-                <h1 class="pb-2 text-center">Reinventing<br/><span class="blue">Education</span></h1>
-                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda nihil quam
-                    qui reiciendis sequi! Ab aliquid culpa delectus, dolor ea iste itaque nobis officia officiis
-                    placeat, provident quia sed sint.</p>
+                <h1 class="pb-4 text-center">Reinventing<br/><span class="blue">Education</span></h1>
+                <p class="text-center">Wij zijn de Bit Academy gestart, omdat wij vonden dat het
+                    huidige onderwijs niet meer om studenten en docenten draait, maar om het
+                    onderwijs zelf. Wij willen dat de ontwikkelingen van mensen centraal
+                    staat en dat wij de beste tech opleiding van Nederland en daarna de wereld worden. Doe jij mee?</p>
             </div>
         </div>
     </div>
@@ -319,7 +327,7 @@
             <div class="col-12 col-md-6 col-md-middle">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pb-2">Onze partners</h2>
+                        <h2 class="pb-4">Onze partners</h2>
                         <p>Bit Academy is een samenwerking tussen verschillende ROC’s in Flevoland, Amstelveen,
                             Amsterdam
                             Zuid-Oost, Almere en Bit.</p>
@@ -331,8 +339,7 @@
                             voordelen van studiefinanciering en een OV-jaarkaart.</p>
                         <br/>
                         <p> Daarnaast zorgt het volgen van de opleiding ervoor dat je gemakkelijker kan doorstromen naar
-                            het
-                            HBO en is er een grotere kans voor een baan in het ICT werkveld.</p>
+                            het HBO en is er een grotere kans voor een baan in het ICT werkveld.</p>
                     </div>
                 </div>
             </div>
