--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@
 
 <body>
 <div class="looking-for-bit">
-    <p>Looking for Bit? <br/><img src="images/arrow.png" alt=""></p>
+    <p>Looking for Bit? <br/><img src="images/arrow.svg" alt=""></p>
 
     <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
 </div>
