--- a/events.html
+++ b/events.html
@@ -51,7 +51,7 @@
 <div class="looking-for-bit">
     <p>Looking for Bit? <br/><img src="images/arrow.svg" alt=""></p>
 
-    <a class="curl" href="https://www.wearebit.com">&nbsp;</a>
+    <a class="curl" href="https://www.wearebit.com?utm_source=bit-academy.nl&utm_medium=referral">&nbsp;</a>
 </div>
 
 <header class="header">
