Added coach worden pagina

--- a/contact.html
+++ b/contact.html
@@ -55,45 +55,42 @@
 </div>
 
 <header class="header">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-10 offset-md-1">
-                <div class="header__inner">
-                    <a href="/" class="header__logo"><img src="images/logo.svg" alt="Logo" class="header__logo"></a>
+    <div class="row">
+        <div class="col-10 offset-1 col-md-10 offset-md-1 col-sm-10 offset-sm-1">
+            <div class="header__inner">
+                <a href="/" class="header__logo"><img src="images/logo.svg" alt="Logo" class="header__logo"></a>
+                <button class="header__btn">
+                    <span class="header__btn-line"></span>
+                    <span class="header__btn-line"></span>
+                    <span class="header__btn-line"></span>
+                </button>
+                <nav class="header__nav">
                     <button class="header__btn">
                         <span class="header__btn-line"></span>
                         <span class="header__btn-line"></span>
                         <span class="header__btn-line"></span>
                     </button>
-                    <nav class="header__nav">
-                        <button class="header__btn">
-                            <span class="header__btn-line"></span>
-                            <span class="header__btn-line"></span>
-                            <span class="header__btn-line"></span>
-                        </button>
-                        <ul>
-                            <li><a href="/">Home</a></li>
-                            <li><a href="manifest">Manifest</a></li>
-                            <li>
-                                <span>Programma <i class="fas fa-angle-down"></i></span>
-                                <ul>
-                                    <li><a href="programma">Studieprogramma</a></li>
-                                    <li>
-                                        <a href="https://www.notion.so/bitacademy/Bit-Academy-Guide-071d67a67c6740c7af3a1f168f1f2418"
-                                           target="_blank" rel="nofollow">Studiegids</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="events">Events</a></li>
-                            <li>
-                                <span>Bedrijven <i class="fas fa-angle-down"></i></span>
-                                <ul>
-                                    <li><a href="tech-talks">Tech Talks</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="contact">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                    <ul>
+                        <li><a href="manifest">Manifest</a></li>
+                        <li>
+                            <span>Programma <i class="fas fa-angle-down"></i></span>
+                            <ul>
+                                <li><a href="programma">Studieprogramma</a></li>
+                                <li>
+                                    <a href="https://www.notion.so/bitacademy/Bit-Academy-Guide-071d67a67c6740c7af3a1f168f1f2418"
+                                       target="_blank" rel="nofollow">Studiegids</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="events">Events</a></li>
+                        <li>
+                            <span>Bedrijven <i class="fas fa-angle-down"></i></span>
+                            <ul>
+                                <li><a href="tech-talks">Tech Talks</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contact">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
