--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                         <span class="header__btn-line"></span>
                     </button>
                     <ul>
-                        <li><a href="/">Home</a></li>
                         <li><a href="manifest">Manifest</a></li>
                         <li>
                             <span>Programma <i class="fas fa-angle-down"></i></span>
@@ -88,6 +87,7 @@
                                 <li><a href="tech-talks">Tech Talks</a></li>
                             </ul>
                         </li>
+                                <li><a href="coach-worden">Coach worden?</a></li>
                         <li><a href="contact">Contact</a></li>
                     </ul>
                 </nav>
