--- a/coach-worden.html
+++ b/coach-worden.html
@@ -96,7 +96,7 @@
     </div>
 </header>
 
-<div class="row row-padding">
+<div class="row row-padding ">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
         <div class="row">
             <div class="col-12 col-md-7 col-md-middle">
@@ -120,9 +120,9 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
-                        <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
-                           target="_blank" rel="nofollow"
-                           class="btn px-md-0 w-md-100"><span>Meld je aan!</span></a>
+                        <a class="typeform-share btn px-md-0 p-3 w-md-100" href="https://form.typeform.com/to/jEA7cenb"
+                           data-mode="drawer_right"
+                           target="_blank"><span>Meld je aan!</span></a>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
 <div class="row row-padding" data-aos="fade-up" data-aos-offset="500" data-aos-once="true">
     <div class="col-10 offset-1 col-md-10 offset-md-1">
         <div class="row paths-container">
-            <div class="col-12 col-md-6 col-md-middle">
+            <div class="col-12 col-md-5 offset-md-1 col-md-middle">
                 <div class="row">
                     <div class="col-12">
                         <h2 class="pb-4">Hoe we zijn</h2>
@@ -232,7 +232,7 @@
                             onderwijs zelf. Wij willen dat de ontwikkelingen van mensen centraal
                             staat en dat wij de beste tech opleiding van Nederland worden. Onze communicatie is erg
                             informeel en direct. Geen managementlagen of politiek. Gewoon zeggen waar het op staat,
-                            open bespreken wat er wel / niet goed gaat en het daarna verbeteren.
+                            open bespreken wat er wel & niet goed gaat en het daarna verbeteren.
                             <br/><br/>
                             Bij hard werken hoort natuurlijk ook ontspanning. Daarom lunchen we gezellig samen,
                             hebben we
@@ -241,15 +241,15 @@
                         </p>
                     </div>
 
-                    <div class="col-12">
-                        <a href="https://www.rocva.nl/MBO-onderwijs/Sectoren/ICT/Software-Developer-op-de-Bit-Academy"
-                           target="_blank" rel="nofollow"
-                           class="btn px-md-0 w-md-100"><span>Wordt onze nieuwe collega!</span></a>
+                    <div class="col-12 col-md-6">
+                        <a class="typeform-share btn px-md-0 p-3 w-md-100" href="https://form.typeform.com/to/jEA7cenb"
+                           data-mode="drawer_right"
+                           target="_blank"><span>Wordt onze nieuwe collega!</span></a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-5 offset-md-1 col-md-middle">
-                <img src="/images/team_foto.png" alt="Team" >
+                <img src="/images/team_foto.png" alt="Team">
             </div>
         </div>
     </div>
@@ -298,6 +298,18 @@
         "uniqueMethods": true
     })
 })</script>
+
+<script> (function () {
+    var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName,
+        id = "typef_orm_share", b = "https://embed.typeform.com/";
+    if (!gi.call(d, id)) {
+        js = ce.call(d, "script");
+        js.id = id;
+        js.src = b + "embed.js";
+        q = gt.call(d, "script")[0];
+        q.parentNode.insertBefore(js, q)
+    }
+})() </script>
 </body>
 
 </html>
