Updated coach worden text

--- a/coach-worden.html
+++ b/coach-worden.html
@@ -102,7 +102,7 @@
             <div class="col-12 col-md-7 col-md-middle">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="mb-5 mb-md-4 u-hyphens">Coach worden?
+                        <h1 class="mb-5 mb-md-4 u-hyphens smaller">Studenten inspireren?
                         </h1>
                     </div>
                 </div>
@@ -110,9 +110,9 @@
                     <div class="col-12 pt-2">
                         <p>
                             Lijkt het jou leuk om naast je vaste baan 1 dag per week de programmeurs van de toekomst op
-                            te leiden? Niet vóór de klas, maar in de klas.<br/><br/>
+                            te leiden? Niet vóór de klas, maar in de klas. <br/><br/>
                             Studenten motiveren, inspireren en activeren zodat ze elke dag een beetje beter
-                            naar huis gaan.
+                            naar huis gaan. Beter leren coachen zodat je dit ook binnen je eigen werk kan toepassen.
                             Lastige concepten uitleggen, streng zijn en daarnaast een informele band met ze opbouwen.
                             Klinkt als iets voor jou?
                         </p>
@@ -122,11 +122,11 @@
                     <div class="col-12 col-xl-4 col-lg-4 col-md-6 pt-3">
                         <a class="typeform-share btn px-md-0 p-3 w-md-100" href="https://form.typeform.com/to/jEA7cenb"
                            data-mode="drawer_right"
-                           target="_blank"><span>Meld je aan!</span></a>
+                           target="_blank"><span>Loop een keer mee!</span></a>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-5">
+            <div class="col-12 col-md-5 pt-4 col-md-middle">
                 <img src="/images/hiring.svg" alt="People on a trophee">
             </div>
         </div>
@@ -144,9 +144,9 @@
                             studenten
                             zoeken zelf een plekje en gaan alvast aan de slag. Om 09:30 komen alle studenten bij elkaar
                             in één van de grote
-                            ruimtes en starten we gezamenlijk de dag. Je behandeld iets actueels uit de software wereld
-                            of
-                            behandeld een nieuw concept. <br/><br/>Om 09:45 rond je af en gaat iedereen weer lekker aan
+                            ruimtes en starten we gezamenlijk de dag. Je behandeld iets actueels uit de software wereld om
+                            de studenten te inspireren met toffe nieuwe tech. Of je behandeld een nieuw programmeer concept.
+                            <br/><br/>Om 09:45 rond je af en gaat iedereen weer lekker aan
                             het werk.
                             Gedurende
                             de hele dag loop je rond en help je de studenten waar nodig. Om 15:45 komen alle studenten
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 pt-4">
                 <div class="embed-container">
                     <iframe src="https://player.vimeo.com/video/455990008?color=ffffff&title=0&byline=0&portrait=0"
                             width="100%" height="360" frameborder="0" allow="autoplay; fullscreen"
@@ -174,22 +174,22 @@
                     <div class="col-12">
                         <h2 class="pb-4">Jouw eigenschappen</h2>
                         <div class="counted">
-                            <p class="item"><span class="dot">1</span>Je hebt een baan in de IT</p>
-                            <p class="item"><span class="dot">2</span>Je hebt gedegen IT kennis (PHP, Databases,
+                            <p class="item"><span class="dot">1</span>Je werkt met passie in de IT</p>
+                            <p class="item"><span class="dot">2</span>Je bent een held met veel IT kennis (PHP of vergelijkbare taal, Databases,
                                 JavaScript, HTML / CSS)</p>
                             <p class="item"><span class="dot">3</span>Je kan complexe concepten eenvoudig uitleggen</p>
-                            <p class="item"><span class="dot">4</span>Je kan motiveren en inspireren</p>
-                            <p class="item"><span class="dot">5</span>Je kan de studenten 1-op-1 coachen en feedback
-                                geven.</p>
-                            <p class="item"><span class="dot">6</span>Je zorgt ervoor dat de studenten beter worden in
+                            <p class="item"><span class="dot">4</span>Je vindt het heerlijk om op een whiteboard te tekenen</p>
+                            <p class="item"><span class="dot">5</span>Je krijgt energie van het motiveren en inspireren van studenten</p>
+                            <p class="item"><span class="dot">6</span>Je wordt enthousiast van 1-op-1 coaching en het geven van feedback .</p>
+                            <p class="item"><span class="dot">7</span>Je zorgt ervoor dat de studenten beter worden in
                                 samenwerken.</p>
-                            <p class="item"><span class="dot">7</span>Je werkt samen met de andere coaches en deelt de
-                                kennis die je opdoet met hen.</p>
+                            <p class="item"><span class="dot">8</span>Je werkt samen met de andere coaches en deelt de
+                                kennis die je opdoet zodat we samen beter worden.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-10 col-md-4 offset-md-1 col-md-middle">
+            <div class="col-10 col-md-4 offset-md-1 col-md-middle pt-4">
                 <img src="/images/skills.svg" alt="Eigen pad">
             </div>
         </div>
@@ -204,16 +204,20 @@
                 <div class="counted">
                     <p class="item"><span class="dot"></span>Een start training om je klaar te stomen voor het coachen
                     </p>
-                    <p class="item"><span class="dot"></span>De ruimte om je coach-vaardigheden te verbeteren</p>
-                    <p class="item"><span class="dot"></span>1 dag per week coachen (minimaal 20. weken)</p>
+                    <p class="item"><span class="dot"></span>De ruimte om je coach-vaardigheden te verbeteren *</p>
+                    <p class="item"><span class="dot"></span>1 of 2 dagen per week coachen</p>
                     <p class="item"><span class="dot"></span>Een passende vergoeding + reiskosten vergoeding</p>
                     <p class="item"><span class="dot"></span>Een leuk enthousiast team!</p>
                     <p class="item"><span class="dot"></span>Vaste trainingsmomenten om je didactische vaardigheden bij
-                        te spijkeren</p>
+                        te spijkeren *</p>
                     <p class="item"><span class="dot"></span>Wekelijkse checkins om de gang van zaken te bespreken</p>
+                    <p class="item"><span class="dot"></span>Samen met je huidige werkgever persoonlijke ontwikkeldoelen afspreken</p>
                 </div>
+
+                <div class="subtext">* deze vaardigheden kan je naast het coachen natuurlijk ook toepassen tijdens je eigen werk. Een student in
+                de mee-werkmodus krijgen werkt namelijk ook op die lastige collega. </div>
             </div>
-            <div class="col-12 col-md-5 offset-md-1 col-md-middle">
+            <div class="col-12 col-md-5 offset-md-1 col-md-middle pt-4">
                 <img src="/images/offer.svg" alt="Eigen pad">
             </div>
         </div>
@@ -226,7 +230,7 @@
             <div class="col-12 col-md-5 offset-md-1 col-md-middle">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="pb-4">Hoe we zijn</h2>
+                        <h2 class="pb-4">Wie wij zijn</h2>
                         <p>Wij zijn de Bit Academy gestart, omdat wij vonden dat het
                             huidige onderwijs niet meer om studenten en docenten draait, maar om het
                             onderwijs zelf. Wij willen dat de ontwikkelingen van mensen centraal
@@ -248,7 +252,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-5 offset-md-1 col-md-middle">
+            <div class="col-12 col-md-5 offset-md-1 col-md-middle pt-4">
                 <img src="/images/team_foto.png" alt="Team">
             </div>
         </div>
